# subtitle-extractor

./: .subtitle-extractor.yaml.example  COMMERCIALIZATION.md  README.md  extract_subs.py  pyproject.toml  requirements.txt
subtitle_extractor/: __init__.py  __main__.py  cli.py  config.py  extractor.py  sync.py  utils.py
sync-subs/: .gitignore  README.md  pyproject.toml
sync-subs/sync_subs/: __init__.py  cli.py  core.py
sync-subs/tests/: test_core.py
tests/: test_config.py  test_filtering.py  test_language.py  test_naming.py  test_sync.py
