[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "subtitle-extractor"
version = "1.0.0"
description = "Bulk subtitle extractor for MKV, MP4, WebM, MOV and AVI files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
progress = ["rich>=13.0"]
ocr = ["pgsrip"]
sync = ["ffsubsync>=0.4"]
all = ["pyyaml>=6.0", "rich>=13.0", "pgsrip", "ffsubsync>=0.4"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
subtitle-extractor = "subtitle_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["subtitle_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
