[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-subs"
version = "0.1.0"
description = "Automatically detect and fix subtitle timing offset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["ffsubsync>=0.4"]

[project.scripts]
sync-subs = "sync_subs.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sync_subs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
